Fri Aug 24 18:50:19 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/InfoRepo/PersistenceUpdater.cpp:

          Corrected location of callback string clear.

Thu Aug 23 19:36:29 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          Fixed so member functions in all log statements agree
          with name of function log statements appear.

Tue Aug 21 22:42:58 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/ThreadPerConnectionSendTask.cpp:

          When the scheduling policy is (empty string), use THR_INHERIT_SCHED
          so that it's consistent with PerConnectionSynch and the default ACE
          and pthread behavior.

        * dds/DCPS/transport/framework/TransportReceiveStrategy_T.cpp:

          Fixed logging: errno can't be logged when recv returns 0.

Tue Aug 21 16:45:38 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/transport/framework/TransportClient.cpp:
        * tests/transport/error_handling/SimpleTransportClient.h:

          Fuzz fixes.

Mon Aug 20 21:43:53 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.cpp:

          Added call to remove data writer that was missed during
          refactoring for InfoRepo(r5529).

Fri Aug 17 23:47:00 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        * dds/InfoRepo/DCPS_IR_Domain.h:
        * dds/InfoRepo/DCPS_IR_Topic.cpp:
        * dds/InfoRepo/DCPS_IR_Topic_Description.h:
        * dds/InfoRepo/PersistenceUpdater.cpp:

          Fixed memory leaks.  This included removing the
          topic id to topic map entry from the DCPS_IR_Domain when
          the topic was deleted, and cleaning up allocated objects
          from the persistent objects before free.

Fri Aug 17 21:20:12 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:
        * tests/transport/error_handling/main.cpp:
