@@ -1,3 +1,13 @@
+Thu Aug 30 17:11:30 UTC 2012  Trevor Fields  <fields_t@ociweb.com>
+
+        * dds/InfoRepo/PersistenceUpdater.cpp:
+
+          Change method of allocation for the persisted strings.  The
+          ACE_CString holds a reference to the allocator which is on the
+          stack and changes between persistent runs.  The change is 
+          to not give the ACE_CString the allocator but just provide it with
+          the allocated memory.
+
 Fri Aug 24 18:50:19 UTC 2012  Trevor Fields  <fields_t@ociweb.com>
 
         * dds/InfoRepo/PersistenceUpdater.cpp:
